RESOLVED FIXED285405
text-emphasis: Do not paint emphasis marks on punctuations
https://bugs.webkit.org/show_bug.cgi?id=285405
Summary text-emphasis: Do not paint emphasis marks on punctuations
Ahmad Saleem
Reported 2025-01-05 13:46:43 PST
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-05 13:46:55 PST
Ahmad Saleem
Comment 2 2025-01-05 13:50:13 PST
EWS
Comment 3 2025-01-06 11:03:23 PST
Committed 288476@main (ea1eac388c76): <https://commits.webkit.org/288476@main> Reviewed commits have been landed. Closing PR #38546 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.