text-emphasis: Do not paint emphasis marks on unicode punctuations

https://bugs.webkit.org/show_bug.cgi?id=285405
rdar://142387538

Reviewed by Darin Adler.

This patch aligns WebKit with Gecko / Firefox and Blink / Chromium and Web Specification [1]:

[1] https://drafts.csswg.org/css-text-decor-3/#text-emphasis-style-property

"Punctuation--specifically, any characters that belong to the Unicode P* general category..."

and was clarified in: https://github.com/w3c/csswg-drafts/issues/839

Inspired by: https://source.chromium.org/chromium/chromium/src/+/dba2b53e93f71fa2df02d72a42a42371a63c695b and
https://phabricator.services.mozilla.com/D219099

This patch adds unicode punctuations list, which should not receive `text emphasis`
painting / styling as well those which should (matching Firefox implementation).

Despite aligning WebKit with Firefox implementation, we are not matching expected output
to enable `text-emphasis-punctuation-3.html` but we are not regressing behavior as well wit
this change.

* LayoutTests/TestExpectations:
* Source/WebCore/platform/graphics/FontCascade.cpp:
(WebCore::FontCascade::canReceiveTextEmphasis):
* Source/WTF/wtf/Unicode/CharacterNames.h: Sorted alphabetically as well.

Canonical link: https://commits.webkit.org/288476@main